[package]
name = "lrp_mnm"
version = "0.1.0"
description = "Claude Proxy — Local Reverse Proxy with Model Name Mapping"
authors = ["you"]
edition = "2021"

[lib]
name = "lrp_mnm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["stream"] }
futures = "0.3"
